--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
 		"name": "vaibhav khedekar",
 		"email": "veb405@gmail.com"
 	}],
-	"require": {},
+	"require": {
+		"php": "^5.3.3 || ^7.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"PhpHelper\\": "src/"
